# paprotka

./: .gitignore  LICENSE  README.adoc  setup.cfg  setup.py
notebooks/: AudioFeatures.ipynb  CMUDict.ipynb  Cython.ipynb  Dynamic Time Warping.ipynb  ExpectationMaximization.ipynb  ExploreReddots.ipynb  Formants.ipynb  HelloCython.ipynb  LSTM.ipynb  LimitTheorem.ipynb  Markov.ipynb  MarkovModels.ipynb  Papers.ipynb  RedDots - DNN DeepSpeech.ipynb  RedDots - GMM UBM.ipynb  RedDots - GMMHMM.ipynb  RedDots - HMM hmmlearn.ipynb  RedDots - HMM pomegranate.ipynb  RedDots - HMM scikit-learn.ipynb  Sample.ipynb  Seminarium.ipynb  Skrzekacz.ipynb  clearJupyter.sh  paths.json.template  runInDocker.sh  runJupyter.sh
paprotka/: jupyter-util.py  jupyter.py  metric.py  sample.py
paprotka/classifier/: collaborative.py  decision_tree.py  dtw.py  markov.py  naive_bayes.py  neighbor.py  parzen.py
paprotka/dataset/: elsdsr.py  reddots.py
paprotka/feature/: binary_pattern.py  canny.py  cepstral.py  moment.py  morphology.py  rotate.py  scale.py
paprotka/integration/: cython_example.py
paprotka/integration/cython/: example.py
paprotka/io/: __init__.py  audio.py  csv.py  dir.py  image.py  zip.py
paprotka/quality/: equal_error.py
paprotka/struct/: balltree.py  union.py
paprotka/sub/: faster.pyx  sample2.py
tests/paprotka/: test_sample.py
tests/paprotka/integration/: test_cython_example.py
