[metadata]
name=paprotka
version=0.1
url=https://github.com/michalsosn/paprotka
description=Various machine learning utilities.
author=Michał Sośnicki
author_email=sosnicki.michal@gmail.com
license=MIT

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
testpaths = tests
python_files = tests/**/*.py
python_functions = should_*
